# cexai-starter

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COOKBOOK.md  HOME.md  INDEX.md  LICENSE  NOTICE  QUICKSTART.md  README.md  TRADEMARK.md  architecture.canvas  briefing.html  curso.html  demo.html  index.html  pyproject.toml  requirements.txt  start.cmd  start.ps1  start.sh
boot/: cex.cmd  (+45 more)
cexai/: pyproject.toml
cexai/cexai/: __init__.py
cexai/cexai/content_factory/: ATTRIBUTION.md  __init__.py  content_factory.py  open_vars.py  pipeline.py  tts.py
cexai/cexai/content_factory/_shared/: __init__.py  errors.py  types.py
cexai/cexai/distribution/: __init__.py
cexai/cexai/distribution/_shared/: __init__.py  errors.py  types.py
cexai/cexai/distribution/blueprints/: __init__.py  catalog.py  cli.py  freeze.py  loader.py
cexai/cexai/distribution/skills/: __init__.py  cli.py  installer.py  lockfile.py  publish_gate.py  reasoning_gate.py  verifier.py
cexai/cexai/distribution/sparc/: __init__.py  decision_matrix.py  methodology.py  templates.py
cexai/cexai/distribution/spec_kit/: __init__.py  analyze.py  cli.py  compliance.py  templates.py
cexai/cexai/features/: __init__.py  content_factory_feature.py  planning_feature.py  providers_feature.py  sentiment_classifier.py
cexai/cexai/foundation/: __init__.py
cexai/cexai/foundation/_shared/: __init__.py  errors.py  types.py
cexai/cexai/foundation/invocation/: __init__.py  cli.py  json_io.py  library.py
cexai/cexai/foundation/llm/: __init__.py  normalizer.py  streaming.py
cexai/cexai/foundation/llm/providers/: __init__.py  anthropic_provider.py  google_provider.py  ollama_provider.py  openai_provider.py
cexai/cexai/foundation/mcp/: __init__.py  collision.py  discovery.py  errors.py  loader.py  registry.py
cexai/cexai/foundation/open_vars/: __init__.py  discovery.py  errors.py  rebind.py  registry.py  schema.py  type_registry.yaml  validators.py  wire.py
cexai/cexai/foundation/tracing/: __init__.py  decorators.py  exporter.py  fallback.py  spans.py
cexai/cexai/governance/: __init__.py  trust.py
cexai/cexai/governance/_shared/: __init__.py  errors.py  types.py
cexai/cexai/governance/audit/: __init__.py  record.py
cexai/cexai/governance/data/: __init__.py  adapter.py  errors.py  marketplace_observation.py
cexai/cexai/governance/exchange/: __init__.py  _spdx_license_ids.py  cyclonedx_bom.py  knowledge_bom.py
cexai/cexai/governance/hitl/: __init__.py  approver.py  file_gate.py
cexai/cexai/governance/rbac/: __init__.py  _b58.py  _b64.py  envelope_keys.py  errors.py  inference_gate.py  jwt_guard.py  model_allowlist.py  principal_signing.py  status_list.py  transparency_log.py
cexai/cexai/governance/tracing/: __init__.py  mission_tracer.py  redaction.py
cexai/cexai/memory/: __init__.py
cexai/cexai/memory/_shared/: __init__.py  errors.py  types.py
cexai/cexai/memory/episodic/: __init__.py  cli.py  compress.py  inject.py  store.py
cexai/cexai/memory/graph/: __init__.py  build.py  query.py  store.py
cexai/cexai/memory/vector/: __init__.py  embedder.py  fallback.py  store.py
cexai/cexai/orchestration/: __init__.py
cexai/cexai/orchestration/_shared/: __init__.py  errors.py  types.py
cexai/cexai/orchestration/planning/: __init__.py  goap.py  planner.py
cexai/cexai/orchestration/sparc/: __init__.py
cexai/cexai/orchestration/streaming/: __init__.py  channel.py
cexai/cexai/orchestration/topology/: __init__.py  audit.py  cli.py  interpreter.py  mixture_of_agents.py  registry.py  synthesizer.py  validate.py
cexai/cexai/security/: __init__.py  default_redaction.yaml
cexai/cexai/tools/: __init__.py
cexai/cexai/tools/_shared/: __init__.py  errors.py  types.py
cexai/cexai/tools/browser/: __init__.py  auth_profile.py  controller.py  session.py
cexai/cexai/tools/ingestion/: __init__.py  cache.py  crawl.py  fetcher.py  robots.py
cexai/cexai/tools/reposynth/: __init__.py  license_gate.py  synthesizer.py
cexai/cexai/tools/research/: __init__.py  citation_gate.py  citations.py  welib_provider.py
(+5848 files in other folders)
